tests/api/reference/negative/10-lengthof-bool.asm
const invalid: u64 = lengthof(true)
